// Copyright 2019 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// The messages collection for the default Exonum consensus implementation.

syntax = "proto3";

package exonum.consensus;

import "types.proto";
import "common.proto";
import "blockchain.proto";
import "runtime.proto";
import "google/protobuf/timestamp.proto";

// Container for the signed messages.
//
// Keep in mind, that:
// hash(SignedMessage) = hash(payload || key.bytes || sign.bytes)
message SignedMessage {
  // Message payload.
  bytes payload = 1;
  // Message author.
  exonum.crypto.PublicKey author = 2;
  // Digital signature.
  exonum.crypto.Signature signature = 3;
}

// List of consensus messages

message Connect {
  string host = 1;
  google.protobuf.Timestamp time = 2;
  string user_agent = 3;
}

message Status {
  uint64 height = 1;
  exonum.crypto.Hash last_hash = 2;
  uint64 pool_size = 3;
}

message Propose {
  uint32 validator = 1;
  uint64 height = 2;
  uint32 round = 3;
  exonum.crypto.Hash prev_hash = 4;
  repeated exonum.crypto.Hash transactions = 5;
}

message Prevote {
  uint32 validator = 1;
  uint64 height = 2;
  uint32 round = 3;
  exonum.crypto.Hash propose_hash = 4;
  uint32 locked_round = 5;
}

message Precommit {
  uint32 validator = 1;
  uint64 height = 2;
  uint32 round = 3;
  exonum.crypto.Hash propose_hash = 4;
  exonum.crypto.Hash block_hash = 5;
  google.protobuf.Timestamp time = 6;
}

message BlockResponse {
  exonum.crypto.PublicKey to = 1;
  exonum.Block block = 2;
  repeated bytes precommits = 3;
  repeated exonum.crypto.Hash transactions = 4;
}

message TransactionsResponse {
  exonum.crypto.PublicKey to = 1;
  repeated bytes transactions = 2;
}

message ProposeRequest {
  exonum.crypto.PublicKey to = 1;
  uint64 height = 2;
  exonum.crypto.Hash propose_hash = 3;
}

message TransactionsRequest {
  exonum.crypto.PublicKey to = 1;
  repeated exonum.crypto.Hash txs = 2;
}

message PrevotesRequest {
  exonum.crypto.PublicKey to = 1;
  uint64 height = 2;
  uint32 round = 3;
  exonum.crypto.Hash propose_hash = 4;
  exonum.common.BitVec validators = 5;
}

message PeersRequest { exonum.crypto.PublicKey to = 1; }

message BlockRequest {
  exonum.crypto.PublicKey to = 1;
  uint64 height = 2;
}

message PoolTransactionsRequest {
  exonum.crypto.PublicKey to = 1;
}

message ExonumMessage {
  oneof message {
    exonum.runtime.AnyTx any_tx = 1;
    Connect connect = 2;
    Status status = 3;

    Precommit precommit = 4;
    Propose propose = 5;
    Prevote prevote = 6;

    TransactionsResponse transactions_response = 7;
    BlockResponse block_response = 8;

    ProposeRequest propose_request = 9;
    TransactionsRequest transactions_request = 10;
    PrevotesRequest prevotes_request = 11;
    PeersRequest peers_request = 12;
    BlockRequest block_request = 13;
    PoolTransactionsRequest pool_transactions_request = 14;
  }
}
