// Copyright 2019 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package exonum.testkit;

import "types.proto";

message TxCreateWallet { string name = 1; }

message TxTransfer {
  exonum.crypto.PublicKey to = 1;
  uint64 amount = 2;
  uint64 seed = 3;
}

message Wallet {
  exonum.crypto.PublicKey pub_key = 1;
  string name = 2;
  uint64 balance = 3;
  uint64 last_update_height = 4;
}
